# email-ealert

./: Pipfile  README.md  ealert-getmids  ealert-processlogs  ealert-processraw  ealert-summarize  ealert_util.py  setup.cfg
ealert/: getmids.py  processlogs.py  processraw.py  summarize.py  util.py
