[metadata]
name = ealert
version = 1.3.4
description = Emergency Alert statistics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.umich.edu/ITS/inf/core-infrastructure-and-automation/mail-routing/ealert
author = Ezekiel Hendrickson
author_email = ezekielh@umich.edu
license = MIT

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.6
packages =
    ealert
install_requires =
    zstandard

[options.extras_require]
dev =
    pytest
    pytest-flake8

[options.entry_points]
console_scripts =
    ealert-getmids = ealert.getmids:main
    ealert-processlogs = ealert.processlogs:main
    ealert-processraw = ealert.processraw:main
    ealert-summarize = ealert.summarize:main

[tool:pytest]
addopts = -v --flake8
flake8-max-line-length = 160
